Fixed Minor not filled in on reload

--- a/app/views/student_requests/new.html.haml
+++ b/app/views/student_requests/new.html.haml
@@ -24,7 +24,7 @@
           %td    
             = label :student_request, :minor, 'Minor'
           %td  
-            = text_field :student_request, 'minor', class: 'input-field', :onfocus => "formtooltip('minor_tip',1)", :onblur => "formtooltip('minor_tip',0)", :size => "6", :type => "text", :value => ""
+            = text_field :student_request, 'minor', class: 'input-field', :onfocus => "formtooltip('minor_tip',1)", :onblur => "formtooltip('minor_tip',0)", :size => "6", :type => "text"
             %span#minor_tip.form-help Enter the 4-letter code for your minor, if any
         %tr
           %td 
