updatet the sign in and sign up feature

--- a/app/views/student_requests/login_page.haml
+++ b/app/views/student_requests/login_page.haml
@@ -25,5 +25,5 @@
     %br
     = submit_tag 'Login'
     
-  =  form_tag('/users/new', method: :get) do
-    = submit_tag 'Sign Up'
+  =  form_tag('/students/signup', method: :get) do
+    = submit_tag 'Student Sign Up'
