--- a/app/views/student_requests/new.html.haml
+++ b/app/views/student_requests/new.html.haml
@@ -65,3 +65,6 @@
       %br
       %br
       = submit_tag 'Save Request'
+      
+    =  form_tag(student_requests_path, method: :get) do
+      = submit_tag 'Cancel'
