--- a/app/views/students/signup.html.haml
+++ b/app/views/students/signup.html.haml
@@ -14,14 +14,24 @@
           = text_field(:session, :uin, class: 'input-field')
       %tr
         %td
-          = label :session, :email, 'Enter your email'
+          = label :session, :uin2, 'ReEnter your UIN'
+        %td
+          = text_field(:session, :uin2, class: 'input-field')
+      %tr
+        %td
+          = label :session, :email, 'Enter your email (Please enter your tamu email)'
         %td
           = text_field(:session, :email, class: 'input-field')
       %tr
         %td
           = label :session, :password, 'Enter your password'
         %td
-          = text_field(:session, :password, class: 'input-field')
+          = password_field(:session, :password, class: 'input-field')
+      %tr
+        %td
+          = label :session, :password2, 'ReEnter your password'
+        %td
+          = password_field(:session, :password2, class: 'input-field')
     %br
     %br
     = submit_tag 'Signup'
