--- a/app/views/student_requests/login_page.html.haml
+++ b/app/views/student_requests/login_page.html.haml
@@ -17,9 +17,9 @@
         %td
           = label :session, :user, 'Login as'
         %td 
-          = radio_button(:session, :user, "admin", :checked => true)
+          = radio_button(:session, :user, "admin")
           admin
-          = radio_button(:session, :user, "student")
+          = radio_button(:session, :user, "student", :checked => true)
           student
     %br
     %br
