fix partial request create bugs

--- a/app/views/student_requests/login_page.html.haml
+++ b/app/views/student_requests/login_page.html.haml
@@ -30,5 +30,5 @@
   =  form_tag('/students/signup', method: :get) do
     = submit_tag 'Sign Up'
     
-  =  form_tag('/students/signup', method: :get) do
+  =  form_tag('/students/forgetPW', method: :get) do
     = submit_tag 'Forget Password'
