--- a/app/views/student_requests/login_page.html.haml
+++ b/app/views/student_requests/login_page.html.haml
@@ -8,14 +8,14 @@
           = label :session, :uin, 'Enter your uin'
         %td
           = text_field(:session, :uin, class: 'input-field')
+          //the format of uin of admin and student may not same, so it is not easy to check at front end
           // = text_field(:session, :uin, class: 'input-field', :pattern => "[0-9]{9}", :oninvalid => "this.setCustomValidity('Invalid UIN')", :oninput => "this.setCustomValidity('')")
       %tr
         %td
           = label :session, :password, 'Enter your password'
         %td
-          // = text_field(:session, :password, class: 'input-field')
           = password_field(:session, :password, class: 'input-field')
-          = link_to "(forgot password)", '/students/forgetPW'
+          = link_to "(forgot password)", '/students/forget_password'
       %tr
         %td
           = label :session, :user, 'Login as'
@@ -30,6 +30,3 @@
     
   =  form_tag('/students/signup', method: :get) do
     = submit_tag 'Sign Up'
-    
-  // =  form_tag('/students/forgetPW', method: :get) do
-  //   = submit_tag 'Forget Password'
