--- a/app/views/students/show.html.haml
+++ b/app/views/students/show.html.haml
@@ -1,6 +1,6 @@
 - unless session[:uin].nil?
   = render 'layouts/login'
-%h1 Students Dashboard Page
+%h1 Students Dashboard Page new
 
 - if @student_requests[0].nil?
   %h2= "Howdy! #{session_get(:name)}(#{session_get(:uin)})"
@@ -10,6 +10,8 @@
 
 
 = link_to '<button type="button" class="regularbutton">New Force Request</button>'.html_safe, new_student_request_path
+= link_to '<button type="button" class="regularbutton">Your Profile</button>'.html_safe, students_profile_path
+= link_to '<button type="button" class="regularbutton">Change Your Password</button>'.html_safe, students_edit_password_path
 
 - if @student_requests[0] != nil
   %table#student_requests.sortable
