forger password cancel

--- a/app/views/students/profile.html.haml
+++ b/app/views/students/profile.html.haml
@@ -39,6 +39,6 @@
         //     = select :student_request, 'expected_graduation', @YearSemester
   %br
   %br
-  = submit_tag 'OK'
+  = submit_tag 'Confirm'
 = form_tag(students_show_path, method: :get) do
-  = submit_tag  "cancel"
+  = submit_tag  "Cancel"
