--- a/app/views/students/profile.html.haml
+++ b/app/views/students/profile.html.haml
@@ -4,7 +4,7 @@
       %td
         = label :student_request, :full_name, 'Full Name'
       %td  
-        = @students[0].name
+        = @students[0].full_name
         // = text_field :student_request, 'full_name', class: 'input-field', value: @students[0].name, :readonly => true
     %tr
       %td  
