--- a/app/views/students/signup.html.haml
+++ b/app/views/students/signup.html.haml
@@ -4,9 +4,9 @@
     %table{:border => "0"}
       %tr
         %td
-          = label :session, :name, 'Enter your name'
+          = label :session, :full_name, 'Enter your full name'
         %td
-          = text_field(:session, :name, class: 'input-field')
+          = text_field(:session, :full_name, class: 'input-field')
       %tr
         %td
           = label :session, :uin, 'Enter your UIN'
