unify the full_name attribute to name

--- a/app/views/student_requests/getStudentInformationById.html.haml
+++ b/app/views/student_requests/getStudentInformationById.html.haml
@@ -7,7 +7,7 @@
       %td= record.uin 
     %tr
       %th Full Name
-      %td= record.full_name
+      %td= record.name
     %tr  
       %th Major
       %td= record.major
