--- a/app/views/student_requests/new.html.haml
+++ b/app/views/student_requests/new.html.haml
@@ -8,10 +8,10 @@
       %table{:border => "0"}
         %tr
           %td
-            = label :student_request, :full_name, 'Full Name'
+            = label :student_request, :name, 'Full Name'
           %td  
-            = @students[0].full_name
-            // = text_field :student_request, 'full_name', class: 'input-field', value: @students[0].name, :required => true, :readonly => true
+            = @students[0].name
+            // = text_field :student_request, 'name', class: 'input-field', value: @students[0].name, :required => true, :readonly => true
         %tr
           %td  
             = label :student_request, :major, 'Major'
