--- a/app/views/student_requests/adminprivileges.html.haml
+++ b/app/views/student_requests/adminprivileges.html.haml
@@ -1,17 +1,25 @@
 - unless session[:uin].nil?
   = render 'layouts/login'
 %h1 
-  Add Admin Request
+  Add New Admin
   .form_new_request
   = form_tag student_requests_addadmin_path, :id => 'new_request' do
     %table{:border => "0"}
       %tr
         %td
-          = label :uin, 'UIN of Admin to be added'
+          = label :uin, 'UIN of new Admin'
         %td 
           = text_field :admin_request, 'uin', class: 'input-field-admin', :required => true
       %tr
-      
+        %td
+          = label :name, 'Name of new Admin'
+        %td
+          = text_field :admin_request, 'name', class: 'input-field-admin', :required => true
+      %tr
+        %td
+          = label :uin, 'Password of new Admin'
+        %td
+          = text_field :admin_request, 'password', class: 'input-field-admin', :required => true
     %br
     %br
     = submit_tag 'Save Request'
