--- a/app/views/student_requests/adminview.html.haml
+++ b/app/views/student_requests/adminview.html.haml
@@ -3,6 +3,7 @@
 %h1 
   Admin Dashboard Page
 = link_to '<button type="button" class="regularbutton">More Actions</button>'.html_safe, student_requests_adminprivileges_path
+%h2= "Howdy! Welcome back #{session_get(:name)} "
 = form_tag student_requests_adminview_path, :method => :get do
   %h4
   .filter_form1
@@ -53,7 +54,7 @@
                 %a{:onclick => "return getDetailsById('#{record.request_id}')"} #{record.request_id}
               %td
                 %a{:onclick => "return buttonclick(#{record.uin});"} #{record.uin}
-              %td= record.full_name
+              %td= record.name
               %td= record.major
               %td= record.classification
               %td= record.minor
