--- a/app/views/student_requests/getStudentInformationByUin.html.haml
+++ b/app/views/student_requests/getStudentInformationByUin.html.haml
@@ -23,7 +23,7 @@
     - @student_by_uin.each do |record|
       %tr
         %td= record.uin 
-        %td= record.full_name
+        %td= record.name
         %td= record.email
         %td= record.phone
         %td= record.major
