change time zone

--- a/app/views/student_requests/login_page.html.haml
+++ b/app/views/student_requests/login_page.html.haml
@@ -31,3 +31,9 @@
     
   =  form_tag('/students/signup', method: :get) do
     = submit_tag 'Sign Up'
+
+
+<span style="float:right;">
+= mail_to 'forcerequestsystem@gmail.com', "forcerequestsystem@gmail.com", :title => 'forcerequestsystem@gmail.com'
+</span>
+<span style="float:right;">If you encounter any problem with using this system, please email to &nbsp</span>
