--- a/app/views/student_requests/adminprivileges.html.haml
+++ b/app/views/student_requests/adminprivileges.html.haml
@@ -48,10 +48,21 @@
           = text_field(:session, :email, class: 'input-field', :pattern => "[a-z0-9._-]{1,}@tamu\.edu", :oninvalid => "this.setCustomValidity('Not TAMU Email Address')", :oninput => "this.setCustomValidity('')")
       %tr
         %td
+          = label :session, :major, 'Major of student:'
+        %td
+          = select :session, 'major', @majorList, :required => true         
+      %tr
+        %td
+          = label :session, :classification, 'Classification of student (U1,U3,G7,G8,etc):'
+        %td
+          = select :session, 'classification', @classificationList, :required => true
+      %tr
+        %td
           = label :session, :password, 'the initial password:'
         %td
-          = text_field(:session, :password, class: 'input-field', value: '123456789')
+          = text_field(:session, :password, class: 'input-field', value: '123456')
     = submit_tag 'Comfirm'
+    
   %br
   Add new Force Request to system 
   .form_new_request
@@ -88,6 +99,7 @@
         %td  
           = text_area :student_request, 'notes', class: 'notes'
     = submit_tag 'Comfirm'
+    
   %br
   Archive All Force Request Data to Archival Database
   = form_tag('/student_requests/deleteall', method: "delete") do
